--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
   export DOCKER_IMAGE_VERSON=$TRAVIS_BRANCH; fi
 - docker build -t $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION .
 script:
-- docker run -i -t --rm $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION echo "Operational!"
+- docker run -i -t --rm -v $PWD/src:/app $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION /app
 - echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
 - docker push $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION
 env:
