--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_install:
-- if [ "$TRAVIS_BRANCH" == "master" ]; then export DOCKER_IMAGE_VERSION=latest; else
-  export DOCKER_IMAGE_VERSON=$TRAVIS_BRANCH; fi
+- if [ "$TRAVIS_BRANCH" == "master" ];
+  then export DOCKER_IMAGE_VERSION=latest;
+  else export DOCKER_IMAGE_VERSION=$TRAVIS_BRANCH;
+  fi
 - docker build -t $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION .
 script:
 - docker run -i -t --rm -v $PWD/src:/app $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION /app
