--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - docker build -t $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION .
 script:
 - docker run -i -t --rm -v $PWD/src:/app $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION /app
-- echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+- docker login -u $DOCKER_USER -p $DOCKER_PASS
 - docker push $DOCKER_IMAGE:$DOCKER_IMAGE_VERSION
 env:
   global:
